--- a/.github/workflows/KillDataAction.yml
+++ b/.github/workflows/KillDataAction.yml
@@ -2,7 +2,7 @@ name: Fetch and Process Kill Data
 
 on:
   schedule:
-    - cron: "0 * * * *" # Runs every hour, on the hour
+    - cron: "*/2 * * * *" # Runs every X minutes
   workflow_dispatch:
 
 jobs:
