--- a/.github/workflows/KillDataAction.yml
+++ b/.github/workflows/KillDataAction.yml
@@ -28,6 +28,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data.json
-          git commit -m "Update data.json" -a
+          git add data.json log.txt
+          git commit -m "Update data.json and log.txt" -a
           git push
