--- a/.github/workflows/KillDataAction.yml
+++ b/.github/workflows/KillDataAction.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data.json log.txt
-          git commit -m "Update data.json and log.txt" -a
+          mkdir -p logs
+          git add data.json logs/*.txt
+          git commit -m "Update data.json and log files" -a
           git push
